--- a/test.tex
+++ b/test.tex
@@ -10,7 +10,7 @@
 
 \usepackage{amssymb,amsfonts,amsmath}
 
-%\usepackage[perpage,symbol*]{footmisc}
+\usepackage[perpage,symbol*]{footmisc}
 \usepackage[final]{graphicx}
 \usepackage{pstricks}
 \usepackage{cite}
