--- a/test.tex
+++ b/test.tex
@@ -36,12 +36,12 @@
 \twocolumn[%
 \begin{center}
 \renewcommand{\baselinestretch}{0.93}
-{\Large\bfseries BACK TO COSMOS
+{\Large\bfseries Type Full Title of Your Paper Here
 
 }\par
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
-F. M. Sanchez$^1\!$, \ V. Kotov$^2\!$, \ and \ , Pr. Michel Grosmann, Dr. Dominique Weigel, Renee. Veysseyre, Christian Bizouard, N. Flawisky, D. Gayral, L. Gueroult,$^3$\\ 
+First Author's Your Full Name$^1\!$, \ Second Author's Full Name$^2\!$, \ and \ Third Author's Full Name$^3$\\ 
 {\footnotesize  $^1$Department of Science, City University,
 Address and Post Code, City, State.\rule{0pt}{12pt}
 E-mail: the 1st author's e-mail\\
@@ -337,3 +337,8 @@ v.\,B112, 1997, 1003. arXiv: hep-th/9702130.
 \vspace*{-6pt}
 \centerline{\rule{72pt}{0.4pt}}
 }
+
+
+\end{document}
+
+
