--- a/test.tex
+++ b/test.tex
@@ -64,6 +64,7 @@ Here is your abstract. Here is your abstract. Here is your abstract.
 Here is your abstract.}}\smallskip
 \end{center}]{%
 
+\tableofcontents
 
 \setcounter{section}{0}
 \setcounter{equation}{0}
