--- a/main.tex
+++ b/main.tex
@@ -77,10 +77,7 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-PLAN
-%This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and %the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the %Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
-
-%The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the %Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ %2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical %constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu %($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$.
+Contents
 
 1. Deterministic Computation and Hierarchy Principle
 
