--- a/main.tex
+++ b/main.tex
@@ -688,24 +688,10 @@ where appear the masses of the heavy leptons (Section 4.6). This implies a drama
 
 
 \section{Special holographic relations}
+The holograpphy technique is by far the most efficient way to treat huge information, based on the
+properties of a cohernt wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by wave. Moreover a coherent wave is represented by a unitary matrix of quantum mechanism. It has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction bu a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been propoesed \{citeSanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
-
-\subsection{The Cosmic Temperature}
-
-In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
-Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the 3D term involving the molecular Hydrogen wavelength:
-\begin{equation}
-2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
-\end{equation}
-The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
-background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
-This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
-$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
-which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
-that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
-the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
-
+A Holographic Principle has been coined by some theoricians \{citeBousso}, the name coming from the idea of dimension reduction, from 3D to 2D, a visual impression in current visible holograms (in fact there is only the 2D restitution of a propagating wave). It this respect, it is strange that nobody tried to extend this process to 1D (an idea proposed in the thesis of the main author in 1975): this is done in Section 3. But the holography must use different wavelength than $l_P$. In fact the Topological Axis is the reunion of height 1D-2D holographic relations. We present here two significative examples 
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
@@ -726,7 +712,21 @@ the Planck length as unit.
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
+\subsection{The Cosmic Temperature}
 
+In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
+Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the 3D term involving the molecular Hydrogen wavelength:
+\begin{equation}
+2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
+\end{equation}
+The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
+background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
+This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
+$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
+which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
+that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
+the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
 
 \section{Intermediate Mathematical Constants}
