--- a/main.tex
+++ b/main.tex
@@ -688,10 +688,10 @@ where appear the masses of the heavy leptons (Section 4.6). This implies a drama
 
 
 \section{Special holographic relations}
-The holograpphy technique is by far the most efficient way to treat huge information, based on the
-properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by wave. Moreover a coherent wave is represented by a unitary matrix of quantum mechanism. It has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction bu a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been propoesed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
+The holographic technique is by far the most efficient way to treat huge information, based on the
+properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by wave. (quanta appearing only et the detection). Moreover a coherent wave is represented by a unitary matrix of quantum mechanism. It has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction bu a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
-A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact there is only the 2D restitution of a propagating wave). It this respect, it is strange that nobody tried to extend this process to 1D (an idea proposed in the author's thesis in 1975): this is done in Section 3. But the holography must use different wavelength than $l_P$. In fact the Topological Axis is the reunion of height 1D-2D holographic relations. We present here two significative examples. 
+A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact there is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea proposed in the author's thesis in 1975): this is done in Section 3. This means that the Planck length is not the single holographic wavelength. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here two significant examples. 
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
