--- a/main.tex
+++ b/main.tex
@@ -123,11 +123,9 @@ Contents
    
 ~~~    9.3. Archimedes constant $\pi$ is a calculation basis
    
-~~~    9.4. Electroweak ppb Fine Tuning
+~~~    9.4. Electroweak-Gravitational ppb Fine Tuning
    
-~~~    9.5. Heavy Leptons ppb Fine Tuning
-   
-~~~    9.6. Gravitation ppb Fine Tuning
+~~~    9.5. Heavy Leptons Fine Tuning
    
  10. Discussion
  
@@ -993,27 +991,48 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The Electroweak ppb Fine-Tuning}
-The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates: 
+\subsection {The 4 Forces ppb Fine-Tuning}
+The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal axis shows clearlty that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $aw$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G$ = P/2^{127/2}$, where $P = m_P/m_e$, which was admitted to be:
 \begin{equation}
-a_{w} = (137 \times 2 \Gamma)^{3}
+p_G = \sqrt{pH} (p/H)^3/d_e
 \end{equation}
-or, equivalently, with the length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
-a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$, yielding to:
+ With the Atiyah constant $\Gamma = \gamma a/\pi$ is (section 8.2), we first noted that, inside the 250 ppb indetermination:  
+ $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$
+ which affects the form of the simplest diophantine equation (section 6).
+ Now $a_{w} is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. This writes    
 \begin{equation}
 \lambdabar/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-This leads to
+leading to:
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-\textit{within its 0.25 ppm indetermination}, confirmed, \textit{again in the ppb range} by:
+This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of involving $\pi$, $gamma$, the Atiyah constant $\Gamma = \gamma a/\pi$, and the Eddington's constant 137. Indeed, whith the neutron/electron mass ratio $n^$ \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
 \begin{equation}
-( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
+aF/\sqrt(pH) \approx \pi(4n//DF\gamma)^3/pG \approx \mu^2
 \end{equation}
-where $n^{\prime} = m_n/m_e^{\prime} = nH/p$ is the effective neutron mass ratio, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$. \textit{Final theory cannot avoid these relations} 
+where $\m2$ is the Muon/electron mass ratio, textit{inside its 40 ppb indetermination}, so proposing the value:
+\begin{equation}
+\mu \approx 206.7682869
+\end{equation}
 
+Note that $n/\Gamma$ is close (3.4 ppm) to the monstrous 5th term 292.6345909 in
+the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
+development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
+incomplete and that Nature uses rational approximations for $\pi$.
+
+These relations show a dual form, the first one without any numerical factor:
+\begin{equation}
+ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
+\end{equation}
+Now, as was recalled above, the exponents represent the number of
+dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
+3D, which could be associated with the superstring theory, where the equations are coherent only if space
+has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
+Note that the strong force is represented by the Bizouard formula:
+\begin{equation}
+F/\sqrt(pH) \approx 2\pi fpH/F
+\end{equation}
 The following weak boson ratios: 
 \begin{equation}
 W \approx 137^{2} \Gamma / 3d_{e}
@@ -1025,25 +1044,23 @@ match (Eq. 1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
 \textit{in the ppb range}
 
-\subsection {The Heavy Leptons ppb Fine-Tuning}
-The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov period shows: 
-\begin{equation}
-E_{F}/m_{e} c^{2} \approx
-m_{\mu}^{2}(m_{p} m_{H})^{1/2}/am_{e}^{3}
-\end{equation} 
-With the above value for $F$, this yields to: 
-\begin{equation}
-\mu \approx 206.7682869
-\end{equation} 
-\textit{within its 20 ppb measurement range}.
-Now, the Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch during which its measurement was false to 3 $\sigma$. It can be wrote:
+\textit{The very existence of so precise ppb relations confirms there exists a Final}. The following section indicates hints towards this Final Theory.
+
+
+\subsection {The Heavy Leptons Fine-Tuning}
+The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov period shows. Now, the Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch during which its measurement was false to 3 $\sigma$. It can be wrote:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
 Now the Koide constant $p_K \approx 1842.604994$ verifies (2 et 0.16 ppm):
-$$ p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e $$
-
-With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $$e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$$ resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
+\begin{equation}
+p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
+\end{equation}
+With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm:
+\begin{equation}
+$$e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$$ 
+\end{equation}
+resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
 $$
 \begin{array}{ll}
 %
@@ -1079,31 +1096,6 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
-
-\subsection {The Gravitational ppb Fine-Tuning}
-Computer analysis shows also the following ppb precise extension for the deviation between $2^{127}$ and
-$a_{G}$ ,
-\begin{equation}
-(2^{127} / a_{G})^{1/2} \approx d_{e} (H/p)^{3} \approx a_{w}^{1/2} (a/\pi)^{4} ( \gamma/4n)^{3}
-\end{equation}
-leading to:
-\begin{equation}
-(aF /\pi d_{e})^{1/3} \approx 4\pi n^{\prime}/ \gamma a
-\end{equation}
-Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
-the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
-development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
-incomplete and that Nature uses rational approximations for $\pi$.
-
-These relations show a dual form, the first one without any numerical factor:
-\begin{equation}
-ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
-\end{equation}
-Now, as was recalled above, the exponents represent the number of
-dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
-3D, which could be associated with the superstring theory, where the equations are coherent only if space
-has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
-
 
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
