--- a/main.tex
+++ b/main.tex
@@ -123,9 +123,9 @@ Contents
    
 ~~~    9.3. Archimedes constant $\pi$ is a calculation basis
    
-~~~    9.4. Electroweak-Gravitational ppb Fine Tuning
+~~~    9.4. Four Force Unification ppb Fine-Tuning
    
-~~~    9.5. Heavy Leptons Fine Tuning
+~~~    9.5. Heavy Leptons Fine-Tuning
    
  10. Discussion
  
@@ -991,8 +991,8 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The 4 Forces ppb Fine-Tuning}
-The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal axis shows clearlty that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $aw$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G$ = P/2^{127/2}$, where $P = m_P/m_e$, which was admitted to be:
+\subsection {Four Forces Unification ppb Fine-Tuning}
+The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearlty that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was admitted to be:
 \begin{equation}
 p_G = \sqrt{pH} (p/H)^3/d_e
 \end{equation}
