--- a/main.tex
+++ b/main.tex
@@ -999,7 +999,7 @@ p_G = \sqrt{pH} (p/H)^3/d_e
  With the Atiyah constant $\Gamma = \gamma a/\pi$ is (section 8.2), we first noted that, inside the 250 ppb indetermination:  
  $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$
  which affects the form of the simplest diophantine equation (section 6).
- Now $a_{w} is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. This writes    
+ Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. This writes    
 \begin{equation}
 \lambdabar/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
