--- a/main.tex
+++ b/main.tex
@@ -1007,26 +1007,26 @@ leading to:
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of involving $\pi$, $gamma$, the Atiyah constant $\Gamma = \gamma a/\pi$, and the Eddington's constant 137. Indeed, whith the neutron/electron mass ratio $n^$ \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
+This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of $\pi$ and $\Gamma$. Indeed, whith the neutron/electron mass ratio $n^$ \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
 \begin{equation}
-aF/\sqrt(pH) \approx \pi(4n//DF\gamma)^3/pG \approx \mu^2
+aF/\sqrt(pH) \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
-where $\m2$ is the Muon/electron mass ratio, textit{inside its 40 ppb indetermination}, so proposing the value:
+where $\mu$ is the Muon/Electron mass ratio, textit{inside its 20 ppb indetermination}, so proposing the value:
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
 
-Note that $n/\Gamma$ is close (3.4 ppm) to the monstrous 5th term 292.6345909 in
+Note that $n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
-development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
-incomplete and that Nature uses rational approximations for $\pi$.
+development of $\pi$ is to this date an unsolved problem, \textit{This confirms that current mathematics is
+incomplete and that Nature uses rational approximations for $\pi$}.
 
 These relations show a dual form, the first one without any numerical factor:
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
 Now, as was recalled above, the exponents represent the number of
-dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
+dimensions. So, this represents a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
 Note that the strong force is represented by the Bizouard formula:
