--- a/main.tex
+++ b/main.tex
@@ -999,7 +999,7 @@ p_G = \sqrt{pH} (p/H)^3/d_e
  With the Atiyah constant $\Gamma = \gamma a/\pi$ is (section 8.2), we first noted that, inside the 250 ppb indetermination:  
  $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$
  which affects the form of the simplest diophantine equation (section 6).
- Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. This writes    
+ Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. Thus:    
 \begin{equation}
 \lambdabar/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
@@ -1007,7 +1007,7 @@ leading to:
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of $\pi$ and $\Gamma$. Indeed, whith the neutron/electron mass ratio $n^$ \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
+This relation is so striking that we ask the computer if it can find synthetic precise relations involving the other forces parameters, in function of $\pi$ and $\Gamma$. Indeed, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$, the computer gives the following relation in the ppb range:
 \begin{equation}
 aF/\sqrt(pH) \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
@@ -1058,7 +1058,7 @@ p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
 \end{equation}
 With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm:
 \begin{equation}
-$$e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$$ 
+e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2 
 \end{equation}
 resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
 $$
