--- a/main.tex
+++ b/main.tex
@@ -101,9 +101,11 @@ Contents
 
 7. The Special Holographic Relations
 
-~~~    7.1 the CosmicSpecial Holographic Relation
+~~~    7.1. Conservation of Information
    
-~~~    7.2. Conservation of Information
+~~~    7.2. The Cosmic Special Holographic Relation
+
+~~     7.3. Holography in Cosmic Coherent Oscillation 
     
 8. The role of Intermediary Mathematical Constants
 
@@ -690,6 +692,7 @@ The holographic technique is by far the most efficient way to treat huge informa
 properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by wave. (quanta appearing only et the detection). Moreover a coherent wave is represented by a unitary matrix of quantum mechanism. It has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction bu a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
 A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact there is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea proposed in the author's thesis in 1975): this is done in Section 3. This means that the Planck length is not the single holographic wavelength. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here two significant examples. 
+
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
@@ -725,6 +728,29 @@ which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, wh
 the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
+
+\subsection{Holography in Cosmic Coherent Oscillation}
+
+While the HB entropy of the shere of radius $R^{\prime} = 2r_e)^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos(section 3) verifies the holographic conservation:
+\begin{equation}
+\pi(R^{\prime}/l_P)^2 \approx (2\Pi/3)(R^{\prime}/r_e)^3 
+\end{equation}
+the HB entropy of the visible Universe obeys only a 3D extension term, with imprecin $\sqrt{4/3\delta} \approx 0.17$:
+\begin{equation}
+pi(R/l_P)^2 \approx (2\Pi/3)(R/r_e)^3 
+\end{equation}
+This is an holographic conservation concerning the half-sphere of the visible universe. By analogy with the above scanning process filling the whole sphere, the above Kotov length $l_k$ (section 4.3) permits to fill the whole sphere by two holographic relations (0.90 \% and 2.6 \%):
+\begin{equation}
+pi(R/l_K)^2 \approx 2\pi l_K/r_e 
+\end{equation}
+\begin{equation}
+(4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
+\end{equation}
+\textit{the induced relation implies the grandcosmos radius} (0.90 \%, 2.6 \% and 0.10 \%):
+\begin{equation}
+l_K^3 \approx R^2r_e/2 \approx R^3 l_p^2/ 3r_e^2 \approx R_GC r_e l_P/sqrt3 
+\end{equation}
+Eliminating the Planck length, this leads to:
 
 
 \section{Intermediate Mathematical Constants}
