--- a/main.tex
+++ b/main.tex
@@ -689,9 +689,9 @@ where appear the masses of the heavy leptons (Section 4.6). This implies a drama
 
 \section{Special holographic relations}
 The holographic technique is by far the most efficient way to treat huge information, based on the
-properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by wave. (quanta appearing only et the detection). Moreover a coherent wave is represented by a unitary matrix of quantum mechanism. It has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction bu a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
+properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism : it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
-A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact there is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea proposed in the author's thesis in 1975): this is done in Section 3. This means that the Planck length is not the single holographic wavelength. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here two significant examples. 
+A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975): this is the subject of Section 3, but using only the Planck legth and the topon. It is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
 
 \subsection{The Conservation of Information}
 
@@ -715,6 +715,8 @@ Copenhagen statistical interpretation. The hidden variables exist really: it is 
 relations would be only Fourier transform manifestations of Wave Mechanics.
 \subsection{The Cosmic Temperature}
 
+\subsection{The Cosmic Temperature}
+
 In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
 Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the 3D term involving the molecular Hydrogen wavelength:
 \begin{equation}
@@ -731,15 +733,15 @@ the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbe
 
 \subsection{Holography in Cosmic Coherent Oscillation}
 
-While the HB entropy of the shere of radius $R^{\prime} = 2r_e)^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos(section 3) verifies the holographic conservation:
+While the HB entropy of the shere of radius $R^{\prime} = 2r_e)^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos(section 3), verifies the relation:
 \begin{equation}
-\pi(R^{\prime}/l_P)^2 \approx (2\Pi/3)(R^{\prime}/r_e)^3 
+\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 
 \end{equation}
-the HB entropy of the visible Universe obeys only a 3D extension term, with imprecin $\sqrt{4/3\delta} \approx 0.17$:
+With a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecion $\sqrt{4/3\delta} \approx 0.17$:
 \begin{equation}
-pi(R/l_P)^2 \approx (2\Pi/3)(R/r_e)^3 
+pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
-This is an holographic conservation concerning the half-sphere of the visible universe. By analogy with the above scanning process filling the whole sphere, the above Kotov length $l_k$ (section 4.3) permits to fill the whole sphere by two holographic relations (0.90 \% and 2.6 \%):
+This is an holographic conservation concerning the half-sphere of the visible universe. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to fill the whole sphere by obeying two holographic relations (0.90 \% and 2.6 \%):
 \begin{equation}
 pi(R/l_K)^2 \approx 2\pi l_K/r_e 
 \end{equation}
@@ -750,8 +752,15 @@ pi(R/l_K)^2 \approx 2\pi l_K/r_e
 \begin{equation}
 l_K^3 \approx R^2r_e/2 \approx R^3 l_p^2/ 3r_e^2 \approx R_GC r_e l_P/sqrt3 
 \end{equation}
-Eliminating the Planck length, this leads to:
-
+Eliminating the Planck length, this induces a ratio \sqrt(\pi/3), the topon and the single-electron radius:
+\begin{equation}
+\sqrt(\pi/3) r_e R_GC^2/R^3 \approx (l_K/r_e)^3 \approx (r_e/\lambdabar_M)(R^{\prime}/R_1)^3
+\end{equation}
+leading to the discovery that $r_e/\lambdabar_M$ is both a cube and a forth power (17 ppm, 1.8 ppm and 3\%):
+\begin{equation}
+r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
+\end{equation}
+where $p_K% is the Koide coinstant and $O_M% is related to special holic power of the Muon/Electron mass ratio $\mu$, see section 9.5.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
