--- a/main.tex
+++ b/main.tex
@@ -752,13 +752,13 @@ pi(R/l_K)^2 \approx 2\pi l_K/r_e
 \begin{equation}
 l_K^3 \approx R^2r_e/2 \approx R^3 l_p^2/ 3r_e^2 \approx R_GC r_e l_P/sqrt3 
 \end{equation}
-Eliminating the Planck length, this induces a ratio \sqrt(\pi/3), the topon and the single-electron radius:
+Eliminating the Planck length, this induces a ratio $\sqrt{\pi/3}$, the topon and the single-electron radius:
 \begin{equation}
-\sqrt(\pi/3) r_e R_GC^2/R^3 \approx (l_K/r_e)^3 \approx (r_e/\lambdabar_M)(R^{\prime}/R_1)^3
+\sqrt{\pi/3} r_e R_{GC}^2/R^3 \approx (l_K/r_e)^3 \approx (r_e/\lambdabar_M)(R^{\prime}/R_1)^3
 \end{equation}
 leading to the discovery that $r_e/\lambdabar_M$ is both a cube and a forth power (17 ppm, 1.8 ppm and 3\%):
 \begin{equation}
-r_e/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
+r_e/\lambdabar_M \approx (R_1 l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
 \end{equation}
 where $p_K% is the Koide coinstant and $O_M% is related to special holic power of the Muon/Electron mass ratio $\mu$, see section 9.5.
 
