--- a/main.tex
+++ b/main.tex
@@ -760,7 +760,7 @@ leading to the discovery that $r_e/\lambdabar_M$ is both a cube and a forth powe
 \begin{equation}
 r_e/\lambdabar_M \approx (R_1 l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
 \end{equation}
-where $p_K% is the Koide coinstant and $O_M% is related to special holic power of the Muon/Electron mass ratio $\mu$, see section 9.5.
+where $p_K$ is the Koide coinstant and $O_M$ is related to special holic power of the Muon/Electron mass ratio $\mu$, see section 9.5.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
