--- a/main.tex
+++ b/main.tex
@@ -105,7 +105,7 @@ Contents
    
 ~~~    7.2. The Cosmic Special Holographic Relation
 
-~~     7.3. Holography in Cosmic Coherent Oscillation 
+~~     7.3. Holic Principle in Cosmic Coherent Oscillation 
     
 8. The role of Intermediary Mathematical Constants
 
@@ -731,7 +731,7 @@ the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, 
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
-\subsection{Holography in Cosmic Coherent Oscillation}
+\subsection{Holic Principle in Cosmic Coherent Oscillation}
 
 While the HB entropy of the shere of radius $R^{\prime} = 2r_e)^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos(section 3), verifies the relation:
 \begin{equation}
@@ -748,19 +748,29 @@ pi(R/l_K)^2 \approx 2\pi l_K/r_e
 \begin{equation}
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
-\textit{the induced relation implies the grandcosmos radius} (0.90 \%, 2.6 \% and 0.10 \%):
+%\textit{the induced relation implies the grandcosmos radius} (0.90 \%, 2.6 \% and 0.10 \%):
+%\begin{equation}
+%l_K^3 \approx R^2r_e/2 \approx R^3 l_p^2/ 3r_e^2 \approx R_GC r_e l_P/sqrt3 
+%\end{equation}
+%Eliminating the Planck length, this induces a ratio $\sqrt{\pi/3}$, the topon and the single-electron radius:
+%\begin{equation}
+%\sqrt{\pi/3} r_e R_{GC}^2/R^3 \approx (l_K/r_e)^3 \approx (r_e/\lambdabar_M)(R^{\prime}/R_1)^3
+%\end{equation}
+%leading to the discovery that $r_e/\lambdabar_M$ is both a cube and a forth power (17 ppm, 1.8 ppm and 3\%):
+%\begin{equation}
+%r_e/\lambdabar_M \approx (R_1 l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
+%\end{equation}
+%where $p_K$ is the Koide coinstant and $O_M$ is related to special holic power of the Muon/Electron mass ratio $\mu$, see %section 9.5.
+The deviation of Eq. is very close to that of Eq.(), inducing, to 17 ppm and 13 ppm: 
 \begin{equation}
-l_K^3 \approx R^2r_e/2 \approx R^3 l_p^2/ 3r_e^2 \approx R_GC r_e l_P/sqrt3 
+ (R_G{C}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
-Eliminating the Planck length, this induces a ratio $\sqrt{\pi/3}$, the topon and the single-electron radius:
+showing a holic form, involving the Muon/Electron mass ratio (see section 9.5).
+taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2, this leads to a number reduced in the ratio $\delta^3$ (17 ppm and 1.8 ppm) :
 \begin{equation}
-\sqrt{\pi/3} r_e R_{GC}^2/R^3 \approx (l_K/r_e)^3 \approx (r_e/\lambdabar_M)(R^{\prime}/R_1)^3
+r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\piP/p_K)^4
 \end{equation}
-leading to the discovery that $r_e/\lambdabar_M$ is both a cube and a forth power (17 ppm, 1.8 ppm and 3\%):
-\begin{equation}
-r_e/\lambdabar_M \approx (R_1 l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
-\end{equation}
-where $p_K$ is the Koide coinstant and $O_M$ is related to special holic power of the Muon/Electron mass ratio $\mu$, see section 9.5.
+where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leoptons (see Eq.). The section 9 will show their holic liaison with the Monster group order.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
