--- a/main.tex
+++ b/main.tex
@@ -766,11 +766,11 @@ The deviation of Eq. is very close to that of Eq.(), inducing, to 17 ppm and 13 
  (R_G{C}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
 showing a holic form, involving the Muon/Electron mass ratio (see section 9.5).
-taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2, this leads to a number reduced in the ratio $\delta^3$ (17 ppm and 1.8 ppm) :
+taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leoptons (see Eq.) (17 ppm and 1.8 ppm) :
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\piP/p_K)^4
 \end{equation}
-where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leoptons (see Eq.). The section 9 will show their holic liaison with the Monster group order.
+The section 9 will show their holic liaison with the Monster group order.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
