--- a/main.tex
+++ b/main.tex
@@ -390,19 +390,24 @@ $$
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$:
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. With the classical electron radius $r_e = \lambdabar_e/a$, to 17 ppm:
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
+
+There is a direct connexion with the Grandcosmos radius, to 0.90 %:
 \begin{equation}
-\lambdabar_M / r_{e} \approx (R_1l_K/R^{\prime}r_e)^3
-\end{equation} 
-This $t_K$ value will be confirmed, in the ppb range, by the value
-deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
-range, with $\Gamma$, the Atiyah Constant (section 4.5). 
+\lambdabar_M  \approx R_1^3/R_{GC}^2
+\end{equation}
+this will be of paramount importance in section 7.3
+
+%This $t_K$ value will be confirmed, in the ppb range, by the value
+%deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
+%range, with $\Gamma$, the Atiyah Constant (section 4.5).
+
 From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group.
 
-\subsection{The Kotov Cosmic Coherent Oscillation Period}
+\subsection{The Cosmic Coherent Oscillation}
 
 The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
