--- a/main.tex
+++ b/main.tex
@@ -387,20 +387,20 @@ Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (S
 $$
 R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}
 $$
-With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
-the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
-with $p/p_{0}$:
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
-
-There is a direct connexion with the Grandcosmos radius, to 0.90 %:
+Moreover, there is a direct connexion with the Grandcosmos radius, to 0.90 \%:
 \begin{equation}
 \lambdabar_M  \approx R_1^3/R_{GC}^2
 \end{equation}
 this will be of paramount importance in section 7.3
 
-%This $t_K$ value will be confirmed, in the ppb range, by the value
-%deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
-%range, with $\Gamma$, the Atiyah Constant (section 4.5).
+With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
+the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
+with $p/p_{0}$:
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
+
+This $t_K$ value will be confirmed, in the ppb range, by the value
+deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
+range, with $\Gamma$, the Atiyah Constant (section 4.5).
 
 From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
@@ -766,12 +766,12 @@ pi(R/l_K)^2 \approx 2\pi l_K/r_e
 %r_e/\lambdabar_M \approx (R_1 l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
 %\end{equation}
 %where $p_K$ is the Koide coinstant and $O_M$ is related to special holic power of the Muon/Electron mass ratio $\mu$, see %section 9.5.
-The deviation of Eq. is very close to that of Eq.(), inducing, to 17 ppm and 13 ppm: 
+The deviation of Eq. is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
 \begin{equation}
  (R_G{C}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
 showing a holic form, involving the Muon/Electron mass ratio (see section 9.5).
-taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (see Eq.) (17 ppm and 1.8 ppm) :
+taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (see Eq. 68) (17 ppm and 1.8 ppm) :
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
