--- a/main.tex
+++ b/main.tex
@@ -748,34 +748,22 @@ pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3
 \end{equation}
 This is an holographic conservation concerning the half-sphere of the visible universe. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to fill the whole sphere by obeying two holographic relations (0.90 \% and 2.6 \%):
 \begin{equation}
-pi(R/l_K)^2 \approx 2\pi l_K/r_e 
+\pi(R/l_K)^2 \approx 2\pi l_K/r_e 
 \end{equation}
 \begin{equation}
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
-%\textit{the induced relation implies the grandcosmos radius} (0.90 \%, 2.6 \% and 0.10 \%):
-%\begin{equation}
-%l_K^3 \approx R^2r_e/2 \approx R^3 l_p^2/ 3r_e^2 \approx R_GC r_e l_P/sqrt3 
-%\end{equation}
-%Eliminating the Planck length, this induces a ratio $\sqrt{\pi/3}$, the topon and the single-electron radius:
-%\begin{equation}
-%\sqrt{\pi/3} r_e R_{GC}^2/R^3 \approx (l_K/r_e)^3 \approx (r_e/\lambdabar_M)(R^{\prime}/R_1)^3
-%\end{equation}
-%leading to the discovery that $r_e/\lambdabar_M$ is both a cube and a forth power (17 ppm, 1.8 ppm and 3\%):
-%\begin{equation}
-%r_e/\lambdabar_M \approx (R_1 l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4 \approx O_M^{3/2}
-%\end{equation}
-%where $p_K$ is the Koide coinstant and $O_M$ is related to special holic power of the Muon/Electron mass ratio $\mu$, see %section 9.5.
-The deviation of Eq. is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
+
+The deviation of Eq. (28) is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
 \begin{equation}
  (R_G{C}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
 showing a holic form, involving the Muon/Electron mass ratio (see section 9.5).
-taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (see Eq. 68) (17 ppm and 1.8 ppm) :
+Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (see Eq. 68) (17 ppm and 1.8 ppm) :
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
-The section 9 will show their holic liaison with the Monster group order.
+The section 9.5 will show their holic liaison with the Monster group order.
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
